--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,7 @@
 .circular-image {
   float: left;
   display: block;
+  margin-left: 10%;
   margin-right: 5%;
   width: 7%;
   height: auto;
